# Scripts

./: .gitignore  pyproject.toml  tags.txt  yuri.txt
src/Ansible/: full_upgrade.yaml  install_nginx.yaml  install_node_exporter.yaml  install_prometheus.yaml  install_syncthing.yaml  reload_nginx.yaml  upgrade_hysteria.yaml  upgrade_hysteria2.yaml  upgrade_node_exporter.yaml  upgrade_prometheus.yaml  upgrade_xray.yaml
src/Ansible/install/: exporter.yaml  nginx.yaml
src/Ansible/restart/: restart_api.yaml
src/Ansible/upgrade/: hysteria2.yaml  qbittorrent.yaml  upgrade_hysteria2.yaml  upgrade_xray.yaml
src/Backup/: jellyfin.py  komga.py  qbittorrent.py
src/Other/: moveBigFile.py  removeSameName.py  sortTag.py
src/Server/: ChangeKernalAndEnableBBRv3.sh  ChangeKernelAndEnableBBRv3.sh  ChangeOfficialSource.sh  CreateSwap.sh  IU_NodeExporter.sh  IU_Prometheus.sh  I_Gh.sh  I_Nginx.sh  I_Postgresql.sh  Upgrade2Debian13.sh  UpgradeXray.sh
src/Video/: batch_convert_big_amd_h265.py  batch_convert_h265.py  convert_4k_h265_amd.py  convert_mkv_to_mp4.py  convert_to_h265.py  detect_duplicate_videos.py  downloadKemono.py
src/qB/BT/: autoDeletePlayed.py  autoRename.py  check_path_length.py  unselectFile.py
src/qB/PT/: autoDeleteNonExist.py
