[project]
dependencies = [
  "aiohttp>=3.12.12",
  "aiohttp-socks>=0.10.1",
  "beautifulsoup4>=4.13.4",
  "pypinyin>=0.54.0",
  "requests>=2.32.3",
  "tenacity>=9.1.2",
  "tqdm>=4.67.1",
]
description = "Add your description here"
name = "scripts"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"
